--- a/index.html
+++ b/index.html
@@ -29,11 +29,29 @@
 
 <script>
 document.getElementByClass("w drum").addEventListener("click", playAudio("tom-1.mp3"));
+</script>
+
+<script>
 document.getElementByClass("a drum").addEventListener("click", playAudio("tom-2.mp3"));
+</script>
+
+<script>
 document.getElementByClass("s drum").addEventListener("click", playAudio("tom-3.mp3"));
+</script>
+
+<script>
 document.getElementByClass("d drum").addEventListener("click", playAudio("tom-4.mp3"));
+</script>
+
+<script>
 document.getElementByClass("j drum").addEventListener("click", playAudio("snare.mp3"));
+</script>
+
+<script>
 document.getElementByClass("k drum").addEventListener("click", playAudio("crash.mp3"));
+</script>
+
+<script>
 document.getElementByClass("l drum").addEventListener("click", playAudio("kick-bass.mp3"));
 </script>
 
